--- a/Front End/styles.css
+++ b/Front End/styles.css
@@ -263,9 +263,12 @@ html {
 
 #payment-details {
     margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
   
 .wallet-info {
